Fix github action

--- a/.github/workflows/build-meilisearch-mcp.yml
+++ b/.github/workflows/build-meilisearch-mcp.yml
@@ -115,7 +115,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./upstream-source
-          file: ./track-upstream/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
